KIK-2465, fix vertical alignment for toastr messages

--- a/app/assets/less/_react_overrides.less
+++ b/app/assets/less/_react_overrides.less
@@ -5,5 +5,11 @@
 
 /* toastr adjust padding */
 .redux-toastr .toastr .rrt-middle-container {
-  padding: 20px 5px;
+  padding: 22px 5px;
+}
+.redux-toastr .toastr .rrt-left-container .toastr-icon {
+  margin-top: 12px;
+}
+.redux-toastr .toastr .rrt-middle-container .rrt-title {
+  margin-bottom: 0;
 }
